--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,12 @@
         </activity>
         <activity android:name=".SignupActivity"
             android:label="Sign up">
-
         </activity>
         <activity android:name=".MeetingsActivity"
             android:label="@string/app_name">
-
+        </activity>
+        <activity android:name=".NewMeetingActivity"
+            android:label="New meeting">
         </activity>
     </application>
 
