--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,42 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignupActivity"
-            android:label="Sign up">
-        </activity>
-        <activity android:name=".MeetingsActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity android:name=".NewMeetingActivity"
-            android:label="New meeting">
-        </activity>
+        <activity
+            android:name=".SignupActivity"
+            android:label="Sign up"></activity>
+        <activity
+            android:name=".MeetingsActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"></activity>
+        <activity
+            android:name=".NewMeetingActivity"
+            android:label="New meeting"></activity>
+
+        <receiver
+            android:name=".BootBroadcastReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REPLACED" />
+                <data android:scheme="package" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".MeetingUpdater"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
