--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".NewMeetingActivity"
             android:label="New meeting"></activity>
 
-        <receiver
+        <!--<receiver
             android:name=".BootBroadcastReceiver"
             android:enabled="true"
             android:exported="false">
@@ -44,12 +44,17 @@
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <data android:scheme="package" />
             </intent-filter>
+        </receiver>-->
+
+        <receiver android:name=".BootBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
         </receiver>
 
-        <service
-            android:name=".MeetingUpdater"
-            android:enabled="true"
-            android:exported="true"></service>
+        <service android:name="ScheduledService">
+        </service>
+
     </application>
 
 </manifest>
